// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: application > implicit insertion > inserts implicit argument when applying explicit arg to fn with implicit param 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "String ~~ String",
    ],
    "term": "(λx => λy -> y) @?2 "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument when applying explicit arg to fn with implicit param 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 44,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "id": 42,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "arg": {
        "id": 1215,
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "id": 1213,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "func": {
          "binding": {
            "annotation": {
              "id": 1204,
              "type": "Var",
              "variable": {
                "lvl": 0,
                "type": "Meta",
                "val": 1,
              },
            },
            "icit": "Implicit",
            "type": "Lambda",
            "variable": "x",
          },
          "body": {
            "binding": {
              "annotation": {
                "id": 1205,
                "type": "Var",
                "variable": {
                  "name": "String",
                  "type": "Free",
                },
              },
              "icit": "Explicit",
              "type": "Lambda",
              "variable": "y",
            },
            "body": {
              "id": 1206,
              "type": "Var",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "id": 1207,
            "type": "Abs",
          },
          "id": 1209,
          "type": "Abs",
        },
        "icit": "Implicit",
        "id": 1214,
        "type": "App",
      },
      "icit": "Explicit",
      "id": 1216,
      "type": "App",
    },
    "type": {
      "id": 46,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument with correct type 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "String ~~ String",
    ],
    "term": "(λx => λy -> y) @?1 "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument with correct type 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 45,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "id": 43,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 28,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "arg": {
        "id": 1215,
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "id": 1213,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "func": {
          "binding": {
            "annotation": {
              "id": 1204,
              "type": "Var",
              "variable": {
                "name": "Num",
                "type": "Free",
              },
            },
            "icit": "Implicit",
            "type": "Lambda",
            "variable": "x",
          },
          "body": {
            "binding": {
              "annotation": {
                "id": 1205,
                "type": "Var",
                "variable": {
                  "name": "String",
                  "type": "Free",
                },
              },
              "icit": "Explicit",
              "type": "Lambda",
              "variable": "y",
            },
            "body": {
              "id": 1206,
              "type": "Var",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "id": 1207,
            "type": "Abs",
          },
          "id": 1209,
          "type": "Abs",
        },
        "icit": "Implicit",
        "id": 1214,
        "type": "App",
      },
      "icit": "Explicit",
      "id": 1216,
      "type": "App",
    },
    "type": {
      "id": 47,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > implicit insertion > inserts multiple implicit arguments when needed 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "String ~~ String",
    ],
    "term": "(λa => (λb => λc -> c) @?3) @?4 "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts multiple implicit arguments when needed 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 2,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 56,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "id": 54,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 31,
          "type": "Neutral",
          "value": {
            "id": 30,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "arg": {
        "id": 1222,
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "id": 1220,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 4,
          },
        },
        "func": {
          "binding": {
            "annotation": {
              "id": 1204,
              "type": "Var",
              "variable": {
                "lvl": 0,
                "type": "Meta",
                "val": 1,
              },
            },
            "icit": "Implicit",
            "type": "Lambda",
            "variable": "a",
          },
          "body": {
            "arg": {
              "id": 1214,
              "type": "Var",
              "variable": {
                "lvl": 1,
                "type": "Meta",
                "val": 3,
              },
            },
            "func": {
              "binding": {
                "annotation": {
                  "id": 1205,
                  "type": "Var",
                  "variable": {
                    "lvl": 1,
                    "type": "Meta",
                    "val": 2,
                  },
                },
                "icit": "Implicit",
                "type": "Lambda",
                "variable": "b",
              },
              "body": {
                "binding": {
                  "annotation": {
                    "id": 1206,
                    "type": "Var",
                    "variable": {
                      "name": "String",
                      "type": "Free",
                    },
                  },
                  "icit": "Explicit",
                  "type": "Lambda",
                  "variable": "c",
                },
                "body": {
                  "id": 1207,
                  "type": "Var",
                  "variable": {
                    "index": 0,
                    "type": "Bound",
                  },
                },
                "id": 1208,
                "type": "Abs",
              },
              "id": 1210,
              "type": "Abs",
            },
            "icit": "Implicit",
            "id": 1215,
            "type": "App",
          },
          "id": 1216,
          "type": "Abs",
        },
        "icit": "Implicit",
        "id": 1221,
        "type": "App",
      },
      "icit": "Explicit",
      "id": 1223,
      "type": "App",
    },
    "type": {
      "id": 58,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > simple application f x 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?1",
    ],
    "term": "(λx -> x) 1",
    "type": "?1",
  },
}
`;

exports[`inference: application > simple application f x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 31,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "arg": {
        "id": 1208,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "func": {
        "binding": {
          "annotation": {
            "id": 1204,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
          "icit": "Explicit",
          "type": "Lambda",
          "variable": "x",
        },
        "body": {
          "id": 1205,
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "id": 1206,
        "type": "Abs",
      },
      "icit": "Explicit",
      "id": 1209,
      "type": "App",
    },
    "type": {
      "id": 34,
      "type": "Neutral",
      "value": {
        "id": 33,
        "type": "Var",
        "variable": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "typedTerms": {},
  },
}
`;
